Started work on slides and speaker notes for module05

--- a/modules/5507-05-hw.md
+++ b/modules/5507-05-hw.md
@@ -13,29 +13,17 @@ knit: (function(inputFile, encoding) {
 
 Graded: 3 points, one point deducted if submitted late.
 
-Your homework assignment will use a data set of housing prices and factors that influence the price.
+Your homework assignment will use a [data set][git1] of housing prices and factors that influence the price. I originally found this data set on the DASL web site, but it has disappeared on me. A nice description of this file is on [my own website][sim1]. Add variable labels for all the variables and create value labels for the categorical variables (NE, CUST, and COR).
 
-I originally found this data set on the DASL web site, but it has disappeared on me. A nice description of this file is on my own website:
+Q1. Do any of the variables have missing values? How many?
 
-http://www.pmean.com/00files/housing.htm
+Q2. Calculate the mean and standard deviation for the two levels of CUST. How much more do custom built houses cost on average?
 
-+ Read in the data housing.txt.
+Q3. Evaluate the relationship between CUST and SQFT using a boxplot. Do custom built houses tend to be bigger?
 
-+ Convert the asterisks in the AGE and TAX variables to missing. How many missing values are there for AGE and for TAX?
+Q4. Are custom built houses more likely to appear on corner lots? Calculate the percentages. Hint: use COR as the rows, CUST as the columns, and display row percentages.
 
-+ Create factors for NE, CUST, and COR. Draw bar charts for each of these factors.
-
-+ Find the largest house (biggest SQFT) in the data set. Is the largest house also the most expensive house?
-
-+ Calculate frequency counts for FEATS. Are there any houses with the no features? Are there any houses with every possible feature (11)?
-
-+ Evaluate the relationship between PRICE and SQFT using a scatterplot. Include a smooth curve. Do larger houses tend to cost more?
-
-+ Evaluate the relationship between  CUST and PRICE using a boxplot. Calculate the mean price and standard deviation by CUST.
-
-+ What is the difference in average prices between northeast houses and other houses? What is the difference in average taxes?
-
-+ Are custom built houses more likely to appear on corner lots? Calculate the percentages. [Please note that in the video, I asked for a relative risk. Don't bother with this. A percentage is more than enough.]
+Place both the code and the output in a single PDF file.
 
 #### Discuss05
 
@@ -54,3 +42,8 @@ I'd like some brief feedback to the videos you just watched. Keep it short. One 
 Graded: 3 points, one point deducted if submitted late.
 
 Not yet available.
+
+[git1]: https://raw.githubusercontent.com/pmean/introduction-to-SAS/master/data/housing.txt
+
+[sim1]: http://www.pmean.com/00files/housing.htm
+
