--- a/src/m04-slides-and-speaker-notes.Rmd
+++ b/src/m04-slides-and-speaker-notes.Rmd
@@ -17,29 +17,6 @@ suppressMessages(suppressWarnings(library(magrittr)))
 suppressMessages(suppressWarnings(library(stringr)))
 ```
 
-### Overview
-
-+ Frequency counts
-+ Convert string to numeric
-+ Labels for number codes
-+ Drawing bar charts
-+ Converting continuous to categorical
-+ Crosstabulations
-+ Recoding
-
-<div class="notes">
-
-author: Steve Simon
-date: created 2021-05-30
-purpose: to produce slides for module04 videos
-license: public domain
-
-Here is an overview of what I want to cover in this module.
-
-We're going to look at a different data set, one with mostly categorical variables. I'll introduce proc format, which allows you to attach labels to categorical data, talk about recoding, and show some tables using proc freq. I'll also show you a simple bar chart.
-
-</div>
-
 ```{r}
 tx <- readLines("m04-5507-simon-categorical-variables.sas")
 
@@ -86,8 +63,8 @@ no <- function(tx, i, d1=0, d2=-2, part=0) {
   s1 <- paste0("Notes", zpad(i))
   s2 <- paste0("Part", zpad(i+1))
   px(tx, s1, s2, d1, d2) %>%
-    str_replace(fixed("* "), "") %>%
-  	str_replace(";$", "") -> notes_text
+    str_remove(fixed("* ")) %>%
+  	str_remove(";$") -> notes_text
   if (part==0) 
     return(ap(notes_text))
   blank_lines <- c(1, str_which(notes_text, "^\\s*$"), length(notes_text))
@@ -102,8 +79,9 @@ no <- function(tx, i, d1=0, d2=-2, part=0) {
 ti <- function(tx, i) {
   s1 <- paste0("Part", zpad(i))
   px(tx, s1, s1, 0, 0) %>%
-  	str_replace(fixed("* Part"), "") %>%
-	  str_replace("^....", "") %>%
+  	str_remove(fixed("* Part")) %>%
+	  str_remove("^....") %>%
+    str_remove(";$") %>%
     return   
 }
 ```
@@ -119,7 +97,38 @@ ou <- function(j) {
 	zpad(j) %0%
 	".png)"
 }
+
+tx %>%
+  str_subset("^\\* ") %>%
+  paste(collapse="\n\n") -> general_structure
 ```
+
+### Overview
+
++ Frequency counts
++ Convert string to numeric
++ Labels for number codes
++ Drawing bar charts
++ Converting continuous to categorical
++ Modifying categorical variables
++ Crosstabulations
+
+<div class="notes">
+
+author: Steve Simon
+date: created 2021-05-30
+purpose: to produce slides for module04 videos
+license: public domain
+
+Here is an overview of what I want to cover in this module.
+
+We're going to look at a different data set, one with mostly categorical variables. I'll introduce proc format, which allows you to attach labels to categorical data, talk about recoding, and show some tables using proc freq. I'll also show you a simple bar chart.
+
+[For my own use]General structure of this program.
+
+`r general_structure`
+
+</div>
 
 ### SAS code: `r ti(tx, 0)` <!--documentation header-->
 `r co(tx, 0)`
@@ -192,7 +201,7 @@ ou <- function(j) {
 + What's coming next
   + Drawing bar charts
 
-### SAS code: `r ti(tx, 7)` <!--bar chart-->
+### SAS code: `r ti(tx, 7)` <!--bar chart 1-->
 `r co(tx, 7)`
 `r no(tx, 7, part=1)`
 
@@ -200,7 +209,7 @@ ou <- function(j) {
 `r ou(6)`
 `r no(tx, 7, part=2)`
 
-### SAS code: `r ti(tx, 8)` <!--bar percentages-->
+### SAS code: `r ti(tx, 8)` <!--bar chart 2-->
 `r co(tx, 8)`
 `r no(tx, 8, part=1)`
 
@@ -208,7 +217,7 @@ ou <- function(j) {
 `r ou(7)`
 `r no(tx, 8, part=2)`
 
-### SAS code: `r ti(tx, 9)` 
+### SAS code: `r ti(tx, 9)` <!--bar chart 3-->
 `r co(tx, 9)`
 `r no(tx, 9, part=1)`
 
@@ -267,7 +276,14 @@ ou <- function(j) {
 `r ou(14)`
 `r no(tx, 14, part=4)`
 
-### SAS code: `r ti(tx, 15)` <!--modifying 1-->
+### Break #5
+
++ What you have learned
+  + Converting continuous to categorical
++ What's coming next
+  + Modifying categorical variables
+
+### SAS code: `r ti(tx, 15)` <!--modifying-->
 `r co(tx, 15)`
 `r no(tx, 15, part=1)`
 
@@ -275,42 +291,52 @@ ou <- function(j) {
 `r ou(15)`
 `r no(tx, 15, part=2)`
 
-### SAS code: `r ti(tx, 16)` <!--modifying 2-->
+### Break #6
+
++ What you have learned
+  + Modifying categorical variables
++ What's coming next
+  + Crosstabulation
+
+### SAS code: `r ti(tx, 16)` <!--crosstabulation 1-->
 `r co(tx, 16)`
 `r no(tx, 16, part=1)`
 
-### SAS output: `r ti(tx, 16)` 
-`r ou(15)`
+### SAS output: `r ti(tx, 16)`
+`r ou(16)`
 `r no(tx, 15, part=2)`
 
-### SAS output:
-`r ou(14)`
-`r no(tx, 15, part=2)`
+### SAS code: `r ti(tx, 17)` <!--crosstabulation 2-->
+`r co(tx, 17)`
+`r no(tx, 17, part=1)`
 
-### SAS output:
-`r ou(15)`
-`r no(tx, 15, part=2)`
+### SAS output: `r ti(tx, 17)`
+`r ou(17)`
+`r no(tx, 17, part=2)`
 
-### Bar chart
+### SAS code: `r ti(tx, 18)` <!--crosstabulation 3-->
+`r co(tx, 18)`
+`r no(tx, 18, part=1)`
 
-Here are the descriptive statistics for age. Notice the number of missing values.
+### SAS output: `r ti(tx, 18)`
+`r ou(18)`
+`r no(tx, 18, part=2)`
 
-Here is what the output from proc freq looks like. Just two rows.
+### SAS code: `r ti(tx, 19)` <!--crosstabulation 4-->
+`r co(tx, 19)`
+`r no(tx, 19, part=1)`
 
-Here is what the output from proc freq looks like. Just two rows.
+### SAS output: `r ti(tx, 19)`
+`r ou(19)`
+`r no(tx, 19, part=2)`
 
-Here is what the output from proc freq looks like. Among the males, almost 5/6 died. Among the females only 1/3 died.
+### Review
 
-Here is the quality check. Notice that adult starts at 21. Should adult start at 18 instead?
++ Frequency counts
++ Convert string to numeric
++ Labels for number codes
++ Drawing bar charts
++ Converting continuous to categorical
++ Modifying categorical variables
++ Crosstabulations
 
-Are the ranges for pre-teen and teenager reasonable?
-
-How about the ranges for toddler?
-
-This shows the age categories starting at the youngest: toddler and pre-teen...
-
-followed y teenager and adult...
-
-with missing bring up the rear. This order was the order of the number codes. So if you want to display your results in a non-alphabetical order, use number codes.
-
-Here is the quality check. PClass=1st codes to first_class=Yes. PClass=2nd or 3rd codes to first_class=No.
