--- a/modules/5507-04-videos.md
+++ b/modules/5507-04-videos.md
@@ -9,48 +9,46 @@ knit: (function(inputFile, encoding) {
 
 ### Videos and handouts, Module04
 
-#### M04-V01. Categorical data
+#### M04-V01. Frequency counts
 
 + Video available in [Panopto format][m04v01]
 + Slides and speaker notes available in [pdf format][git1]
++ SAS program used in these videos in [text format][git2]
 
-#### M04-V02. Getting started on the homework
+#### M04-V02. Convert string to numeric
 
 + Video available in [Panopto format][m04v02]
 + See above for slides and speaker notes
 
-#### M04-V03. Review, part 1
+#### M04-V03. Labels for number codes
 + Video available in [Panopto format][m04v03]
-+ No slides or speaker notes available
++ See above for slides and speaker notes
 
-#### M04-V03. Review, part 2
+#### M04-V04. Drawing bar charts
 + Video available in [Panopto format][m04v04]
-+ No slides or speaker notes available
++ See above for slides and speaker notes
 
-#### M04-V03. Review, part 3
+#### M04-V05. Converting continuous to categorical
 + Video available in [Panopto format][m04v05]
-+ No slides or speaker notes available
++ See above for slides and speaker notes
 
-#### M04-V03. Review, part 4
+#### M04-V06. Modifying categorical variables
 + Video available in [Panopto format][m04v06]
-+ No slides or speaker notes available
++ See above for slides and speaker notes
 
-#### M04-V03. Review, part 5
+#### M04-V07. Crosstabulations
 + Video available in [Panopto format][m04v07]
-+ No slides or speaker notes available
-
-#### M04-V03. Review, part 6
-+ Video available in [Panopto format][m04v08]
-+ No slides or speaker notes available
++ See above for slides and speaker notes
 
 
-[git1]: https://umkc.instructure.com/courses/68719/modules/items/1002182
 
-[m04v01]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=eb10e8d6-dda8-4524-922e-aa840177f72b
-[m04v02]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=be1f9d24-b3eb-4ff1-a4cf-aa8401812727
-[m04v03]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=066b182d-96ce-4342-8caf-aaf6012d3604
-[m04v04]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=8274d5e9-e8c5-4630-ae52-aaf60133c462
-[m04v05]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=f2159f5b-76b9-443c-a4a2-aaf601381275
-[m04v06]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=73a75b6b-821c-4e73-90fa-aaf6013fca85
-[m04v07]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=0eaf8199-e634-47d9-97f4-aaf6014c67a1
-[m04v08]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=e19d457b-4de1-4b0b-9576-aaf601707986
+[git1]: https://github.com/pmean/introduction-to-SAS/blob/master/results/m04-5507-simon-slides-and-speaker-notes.pdf
+[git2]: https://github.com/pmean/introduction-to-SAS/blob/master/src/m04-5507-simon-categorical-variables.sas
+
+[m04v01]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=746cc8d9-c4f9-42ea-a043-ad640159e272
+[m04v02]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=3877b83b-33ec-4550-8e62-ad64015b9b0b
+[m04v03]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=86f5eee5-87ae-4ad4-95ee-ad64015dbf0a
+[m04v04]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=894ff2ca-2cbe-49a2-a5fa-ad64015f1396
+[m04v05]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=51ae4c86-ca1b-4964-b5bb-ad6401617818
+[m04v06]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=639a8277-6177-4fc5-84ec-ad640164d171
+[m04v07]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=60c17371-49ee-41f0-ba40-ad64016679e1
