--- a/src/extract-sas.Rmd
+++ b/src/extract-sas.Rmd
@@ -36,12 +36,12 @@ px <- function(tx, s1, s2, d1=0, d2=-2) {
 ```
 
 ```{r}
-co <- function(tx, i, d1=2, d2=-2) {
+co <- function(tx=tx, i=current_i, d1=2, d2=-2) {
   s1 <- paste0("Part", zpad(i))
   s2 <- paste0("Notes", zpad(i))
   px(tx, s1, s2, d1, d2) %>%
     append("```{}", after=0) %>%
-	append("```") %>%
+  	append("```") %>%
     paste0(collapse="\n") %>%
 	return
 }
@@ -55,7 +55,7 @@ ap <- function(tx) {
 	paste0(collapse="\n")
 }
 
-no <- function(tx, i, d1=0, d2=-2, part=0) {
+no <- function(tx=tx, i=current_i, d1=0, d2=-2, part=0) {
   s1 <- paste0("Notes", zpad(i))
   s2 <- paste0("Part", zpad(i+1))
   px(tx, s1, s2, d1, d2) %>%
@@ -72,7 +72,8 @@ no <- function(tx, i, d1=0, d2=-2, part=0) {
 ```
 
 ```{r}
-ti <- function(tx, i) {
+ti <- function(tx=tx, i) {
+  current_i <<- i
   s1 <- paste0("Part", zpad(i))
   px(tx, s1, s1, 0, 0) %>%
   	str_remove(fixed("* Part")) %>%
