--- a/src/m04-slides-and-speaker-notes.Rmd
+++ b/src/m04-slides-and-speaker-notes.Rmd
@@ -39,208 +39,180 @@ We're going to look at a different data set, one with mostly categorical variabl
 
 </div>
 
-### SAS code: `r ti(tx, 0)` <!--documentation header-->
-`r co(tx, 0)`
-`r no(tx, 0)`
-
+### SAS code: `r ti(tx, i=0)` <!--documentation header-->
+`r co(tx)`
+`r no(tx)`
 
 ### SAS code: `r ti(tx, 1)` <!--where to find and store things-->
-`r co(tx, 1)`
-`r no(tx, 1)`
-
+`r co(tx)`
+`r no(tx)`
 
 ### SAS code: `r ti(tx, 2)` <!--import-->
-`r co(tx, 2)`
-`r no(tx, 2)`
+`r co(tx)`
+`r no(tx)`
 
 ### SAS code: `r ti(tx, 3)` <!--print-->
-`r co(tx, 3)`
-`r no(tx, 3, part=1)`
-
+`r co(tx)`
+`r no(tx, part=1)`
 ### SAS output: `r ti(tx, 3)`
 `r ou(1)`
-`r no(tx, 3, part=2)`
+`r no(tx, part=2)`
 
 ### SAS code: `r ti(tx, 4)` <!--freq-->
-`r co(tx, 4)`
-`r no(tx, 4, part=1)`
-
+`r co(tx)`
+`r no(tx, part=1)`
 ### SAS output: `r ti(tx, 4)`
 `r ou(2)`
-`r no(tx, 4, part=2)`
-
+`r no(tx, part=2)`
 ### SAS output: `r ti(tx, 4)`
 `r ou(3)`
-`r no(tx, 4, part=3)`
+`r no(tx, part=3)`
 
 ### Break #1
-
 + What have you learned
   + Frequency counts
 + What's coming next
   + Convert string to numeric
 
 ### SAS code: `r ti(tx, 5)`  <!--convert-->
-`r co(tx, 5)`
-`r no(tx, 5, part=1)`
-
+`r co(tx)`
+`r no(tx, part=1)`
 ### SAS output: `r ti(tx, 5)`
 `r ou(4)`
-`r no(tx, 5, part=2)`
+`r no(tx, part=2)`
 
 ### Break #2
-
 + What you have learned
   + Convert string to numeric
 + What's coming next
   + Labels for number codes
 
 ### SAS code: `r ti(tx, 6)` <!--format-->
-`r co(tx, 6)`
-`r no(tx, 6, part=1)`
-
+`r co(tx)`
+`r no(tx, part=1)`
 ### SAS output: `r ti(tx, 6)` 
 `r ou(5)`
-`r no(tx, 6, part=2)`
+`r no(tx, part=2)`
 
 ### Break #3
-
 + What you have learned
   + Labels for number codes
 + What's coming next
   + Drawing bar charts
 
 ### SAS code: `r ti(tx, 7)` <!--bar chart 1-->
-`r co(tx, 7)`
-`r no(tx, 7, part=1)`
-
+`r co(tx)`
+`r no(tx, part=1)`
 ### SAS output: `r ti(tx, 7)` 
 `r ou(6)`
-`r no(tx, 7, part=2)`
+`r no(tx, part=2)`
 
 ### SAS code: `r ti(tx, 8)` <!--bar chart 2-->
-`r co(tx, 8)`
-`r no(tx, 8, part=1)`
-
+`r co(tx)`
+`r no(tx, part=1)`
 ### SAS output: `r ti(tx, 8)` 
 `r ou(7)`
-`r no(tx, 8, part=2)`
+`r no(tx, part=2)`
 
 ### SAS code: `r ti(tx, 9)` <!--bar chart 3-->
 `r co(tx, 9)`
-`r no(tx, 9, part=1)`
-
+`r no(tx, part=1)`
 ### SAS output: `r ti(tx, 9)` 
 `r ou(8)`
-`r no(tx, 9, part=2)`
+`r no(tx, part=2)`
 
 ### Break #4
-
 + What you have learned
   + Drawing bar charts
 + What's coming next
   + Converting continuous to categorical
 
 ### SAS code: `r ti(tx, 10)` <!--converting 1-->
-`r co(tx, 10)`
-`r no(tx, 10)`
+`r co(tx)`
+`r no(tx)`
 
 ### SAS code: `r ti(tx, 11)` <!--converting 2-->
-`r co(tx, 11)`
-`r no(tx, 11, part=1)`
-
+`r co(tx)`
+`r no(tx, part=1)`
 ### SAS output: `r ti(tx, 11)` 
 `r ou(9)`
-`r no(tx, 11, part=2)`
-
+`r no(tx, part=2)`
 ### SAS output: `r ti(tx, 11)` 
 `r ou(10)`
-`r no(tx, 11, part=3)`
-
+`r no(tx, part=3)`
 ### SAS output: `r ti(tx, 11)` 
 `r ou(11)`
-`r no(tx, 11, part=4)`
+`r no(tx, part=4)`
 
 ### SAS code: `r ti(tx, 12)` <!--converting 3-->
-`r co(tx, 12)`
-`r no(tx, 12)`
+`r co(tx)`
+`r no(tx)`
 
 ### SAS code: `r ti(tx, 13)` <!--converting 4-->
-`r co(tx, 13)`
-`r no(tx, 13)`
+`r co(tx)`
+`r no(tx)`
 
 ### SAS code: `r ti(tx, 14)` <!--converting 5-->
-`r co(tx, 14)`
-`r no(tx, 14, part=1)`
-
+`r co(tx)`
+`r no(tx, part=1)`
 ### SAS output: `r ti(tx, 14)` 
 `r ou(12)`
-`r no(tx, 14, part=2)`
-
+`r no(tx, part=2)`
 ### SAS output: `r ti(tx, 14)` 
 `r ou(13)`
-`r no(tx, 14, part=3)`
-
+`r no(tx, part=3)`
 ### SAS output: `r ti(tx, 14)` 
 `r ou(14)`
-`r no(tx, 14, part=4)`
+`r no(tx, part=4)`
 
 ### Break #5
-
 + What you have learned
   + Converting continuous to categorical
 + What's coming next
   + Modifying categorical variables
 
 ### SAS code: `r ti(tx, 15)` <!--modifying-->
-`r co(tx, 15)`
-`r no(tx, 15, part=1)`
-
+`r co(tx)`
+`r no(tx, part=1)`
 ### SAS output: `r ti(tx, 15)` 
 `r ou(15)`
-`r no(tx, 15, part=2)`
+`r no(tx, part=2)`
 
 ### Break #6
-
 + What you have learned
   + Modifying categorical variables
 + What's coming next
   + Crosstabulation
 
 ### SAS code: `r ti(tx, 16)` <!--crosstabulation 1-->
-`r co(tx, 16)`
-`r no(tx, 16, part=1)`
-
+`r co(tx)`
+`r no(tx, part=1)`
 ### SAS output: `r ti(tx, 16)`
 `r ou(16)`
-`r no(tx, 15, part=2)`
+`r no(tx, part=2)`
 
 ### SAS code: `r ti(tx, 17)` <!--crosstabulation 2-->
-`r co(tx, 17)`
-`r no(tx, 17, part=1)`
-
+`r co(tx)`
+`r no(tx, part=1)`
 ### SAS output: `r ti(tx, 17)`
 `r ou(17)`
-`r no(tx, 17, part=2)`
+`r no(tx, part=2)`
 
 ### SAS code: `r ti(tx, 18)` <!--crosstabulation 3-->
-`r co(tx, 18)`
-`r no(tx, 18, part=1)`
-
+`r co(tx)`
+`r no(tx, part=1)`
 ### SAS output: `r ti(tx, 18)`
 `r ou(18)`
-`r no(tx, 18, part=2)`
+`r no(tx, part=2)`
 
 ### SAS code: `r ti(tx, 19)` <!--crosstabulation 4-->
-`r co(tx, 19)`
-`r no(tx, 19, part=1)`
-
+`r co(tx)`
+`r no(tx, part=1)`
 ### SAS output: `r ti(tx, 19)`
 `r ou(19)`
-`r no(tx, 19, part=2)`
+`r no(tx, part=2)`
 
 ### Review
-
 + Frequency counts
 + Convert string to numeric
 + Labels for number codes
