--- a/src/m05-slides-and-speaker-notes.Rmd
+++ b/src/m05-slides-and-speaker-notes.Rmd
@@ -1,19 +1,11 @@
 ---
 title: "Introduction to SAS, Working with a mix of categorical and continuous variables"
 author: "Steve Simon"
-date: "7/19/2019"
-output: powerpoint_presentation
----
-date: "Created: 2021-05-31"
+date: "Created: 2019-07-19"
 output: powerpoint_presentation
 ---
 
-
-```{r setup, echo=FALSE}
-knitr::opts_chunk$set(echo=FALSE, comment="")
-suppressMessages(suppressWarnings(library(dplyr)))
-suppressMessages(suppressWarnings(library(knitr)))
-suppressMessages(suppressWarnings(library(magrittr)))
+```{r common-code, child="extract-sas.Rmd"}
 ```
 
 ### Overview
@@ -30,226 +22,70 @@ suppressMessages(suppressWarnings(library(magrittr)))
 
 author: Steve Simon
 date: Created 2021-05-30
-purpose: to produce slides for module01 videos
+purpose: to produce slides for module05 videos
 license: public domain
 
 Here is an overview of what I want to cover in module05. 
 
+[For my own use]General structure of this program.
+
+`r general_structure`
+
 </div>
 
+### SAS code: `r ti(tx, 0)` <!--documentation header-->
+`r co(tx)`
+`r no(tx)`
+
+### SAS code: `r ti(tx, 1)` <!--where to find and store things-->
+`r co(tx)`
+`r no(tx)`
+
+### SAS code: `r ti(tx, 2)` <!--label-->
+`r co(tx)`
+`r no(tx)`
+
+### SAS code: `r ti(tx, 3)` <!--read-->
+`r co(tx)`
+`r no(tx)`
+
+### SAS code: `r ti(tx, 4)` <!--print-->
+`r co(tx)`
+`r no(tx, part=1)`
+### SAS output: `r ti(tx, 4)`
+`r ou(1)`
+`r no(tx, part=2)`
+
+
+### SAS code: `r ti(tx, 5)` <!--means and freqs-->
+`r co(tx)`
+`r no(tx, part=1)`
+### SAS output: `r ti(tx, 5)`
+`r ou(2)`
+`r no(tx, part=2)`
+### SAS output: `r ti(tx, 5)`
+`r ou(2)`
+`r no(tx, part=2)`
 
 
 
-```{r lecture03.sas}
-program_name <- opts_current$get("label") 
-program_name %>%
-  readLines(warn=FALSE) -> sas_code
 
-input_source_line <- grep("filename raw_data", sas_code) + 1
-sas_code[input_source_line] %>%
-  sub('^.*?"', '', .)                                      %>%
-  sub('";',    '', .)                                      %>% 
-  readLines(n=10)                                          %>%
-  paste0(collapse="\n")                                    -> ppt_data
 
-sas_code %>% 
-  grep("********* *********", ., fixed=TRUE)               -> comment_lines
-k <- (length(comment_lines)-1) %/% 2
-
-ppt_head <- rep(" ", k)
-ppt_note <- rep(" ", k)
-ppt_code <- rep(" ", k)
-for (i in 1:k) {
-  ppt_head[i] <- paste0("### ", sas_code[comment_lines[2*i-1] + 1])
-  ppt_note[i] <- paste0(sas_code[(comment_lines[2*i-1]+3):(comment_lines[2*i]  -1)], collapse="\n")
-  ppt_code[i] <- paste0(sas_code[(comment_lines[2*i]  +2):(comment_lines[2*i+1]-2)], collapse="\n")
-}
-```
-
-<!---Preliminaries--->`r j <- 1`
-`r ppt_head[j]`
-
-`r ppt_note[j]`
-
-### fev data set
-```{r}
-cat(ppt_data)
-```
-<div class="notes">
-Here are the first ten rows of the fev data set.
-</div>
-
-<!---Preliminaries--->`r j <- j+1`
-`r ppt_head[j]`
-```{r}
-cat(ppt_code[j])
-```
-<div class="notes">
-`r ppt_note[j]`
-</div>
-
-<!---proc format--->`r j <- j+1`
-`r ppt_head[j]`
-```{r}
-cat(ppt_code[j])
-```
-<div class="notes">
-`r ppt_note[j]`
-</div>
-
-<!---data step--->`r j <- j+1`
-`r ppt_head[j]`
-```{r}
-cat(ppt_code[j])
-```
-<div class="notes">
-`r ppt_note[j]`
-</div>
-
-<!---proc print--->`r j <- j+1`
-`r ppt_head[j]`
-```{r}
-cat(ppt_code[j])
-```
-<div class="notes">
-`r ppt_note[j]`
-</div>
-
-<!---output--->`r k <- 1`
-`r ppt_head[j]`
-![Output, proc print](../images/lecture03-0`r k`.png)
-<div class="notes">
-Here are the first ten rows of the data .
-</div>
 
 <!---proc freq and means--->`r j <- j+1`
-`r ppt_head[j]`
-```{r}
-cat(ppt_code[j])
-```
-<div class="notes">
-`r ppt_note[j]`
-</div>
-
 <!---output--->`r k <- k+1`
-`r ppt_head[j]`
-![Output, proc freq](../images/lecture03-0`r k`.png)
-
-
 <!---output--->`r k <- k+1`
-`r ppt_head[j]`
-![Output, proc means](../images/lecture03-0`r k`.png)
-
 <!---proc corr--->`r j <- j+1`
-`r ppt_head[j]`
-```{r}
-cat(ppt_code[j])
-```
-<div class="notes">
-`r ppt_note[j]`
-</div>
-
 <!---output--->`r k <- k+1`
-`r ppt_head[j]`
-![Output, proc corr](../images/lecture03-0`r k`.png)
-
 <!---proc sgplot--->`r j <- j+1`
-`r ppt_head[j]`
-```{r}
-cat(ppt_code[j])
-```
-<div class="notes">
-`r ppt_note[j]`
-</div>
-
 <!---output--->`r k <- k+1`
-`r ppt_head[j]`
-![Output, proc sgplot](../images/lecture03-0`r k`.png)
-
 <!---proc sgplot--->`r j <- j+1`
-`r ppt_head[j]`
-```{r}
-cat(ppt_code[j])
-```
-<div class="notes">
-`r ppt_note[j]`
-</div>
-
 <!---output--->`r k <- k+1`
-`r ppt_head[j]`
-![Output, proc sgplot](../images/lecture03-0`r k`.png)
-
 <!---proc sgplot--->`r j <- j+1`
-`r ppt_head[j]`
-```{r}
-cat(ppt_code[j])
-```
-<div class="notes">
-`r ppt_note[j]`
-</div>
-
 <!---output--->`r k <- k+1`
-`r ppt_head[j]`
-![Output, proc sgplot](../images/lecture03-0`r k`.png)
-
 <!---by statement--->`r j <- j+1`
-`r ppt_head[j]`
-```{r}
-cat(ppt_code[j])
-```
-<div class="notes">
-`r ppt_note[j]`
-</div>
-
 <!---output--->`r k <- k+1`
-`r ppt_head[j]`
-![Output, proc means with by statement](../images/lecture03-0`r k`.png)
-
-
 <!---proc sgplot--->`r j <- j+1`
-`r ppt_head[j]`
-```{r}
-cat(ppt_code[j])
-```
-<div class="notes">
-`r ppt_note[j]`
-</div>
-
 <!---output--->`r k <- k+1`
-`r ppt_head[j]`
-![Output, proc sgplot](../images/lecture03-0`r k`.png)
-
 <!---output--->`r k <- k+1`
-`r ppt_head[j]`
-![Output, proc means with by statement](../images/lecture03-`r k`.png)
-
 <!---Further investigation--->`r j <- j+1`
-`r ppt_head[j]`
-
-`r ppt_note[j]`
-
-<!---hw 1/5--->`r j <- j+1`
-`r ppt_head[j]`
-
-`r ppt_note[j]`
-
-<!---hw 2/5--->`r j <- j+1`
-`r ppt_head[j]`
-
-`r ppt_note[j]`
-
-<!---hw 3/5--->`r j <- j+1`
-`r ppt_head[j]`
-
-`r ppt_note[j]`
-
-<!---hw 4/5--->`r j <- j+1`
-`r ppt_head[j]`
-
-`r ppt_note[j]`
-
-<!---hw 5/5--->`r j <- j+1`
-`r ppt_head[j]`
-
-`r ppt_note[j]`
-
