--- a/modules/5507-05-videos.md
+++ b/modules/5507-05-videos.md
@@ -11,10 +11,10 @@ knit: (function(inputFile, encoding) {
 
 #### M05-V01. A mix of categorical and continuous variables
 
-+ Video available in [Panopto format][m05v01]
++ An earlier version of this Video is temporarity available in [Panopto format][m05v01]
 + Slides available in [pdf format][git1]
 
-[git1]: https://umkc.instructure.com/courses/68719/modules/items/1002201
+[git1]: https://github.com/pmean/introduction-to-SAS/blob/master/results/m05-5507-slides-and-speaker-notes.pdf
 
 [m05v01]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=e121e14a-2bc8-47ff-821e-aa920138690b
 
