Created automatic updates to README.md file

--- a/modules/5507-01-videos.md
+++ b/modules/5507-01-videos.md
@@ -9,7 +9,7 @@ knit: (function(inputFile, encoding) {
 
 ### Videos and handouts, Module01
 
-#### M01-V01. Introducting your instructor
+#### M01-V01. Introducing your instructor
 
 + Video available in [Panopto format][m01v01]
 + Slides and speaker notesavailable in [pdf format][git1]
