--- a/modules/5507-01-videos.md
+++ b/modules/5507-01-videos.md
@@ -11,53 +11,41 @@ knit: (function(inputFile, encoding) {
 
 #### M01-V01. Introducing your instructor
 
-+ Video available in [Panopto format][m01v01]
-+ Slides and speaker notesavailable in [pdf format][git1]
++ PowerPoint presentation available in [Panopto format][m01v01] ( 3 minutes)
 
 #### M01-V02. Where you can get SAS
 
-+ Video available in [Panopto format][m01v02]
-+ See above for slides and speaker notes.
++ PowerPoint presentation available in [Panopto format][m01v02] ( 4 minutes)
 
 #### M01-V03. Your first SAS program
 
-+ Video available in [Panopto format][m01V03]
-+ Slides are not available
-+ m01-5507-simon-basic-program.sas is available in [text format][git2]
-+ Live demo available in [Panopto format][m01v03a]
++ PowerPoint presentation available in [Panopto format][m01V03] ( 5 minutes)
++ SAS live demonstration available in [Panopto format][m01v03a] (11 minutes)
 
 #### M01-V04. History of SAS
-+ Video available in [Panopto format][m01v04]
-+ See above for slides and speaker notes.
++ PowerPoint presentation available in [Panopto format][m01v04] ( 7 minutes)
 
 #### M01-V05. Documentation header
 
-+ Video available in [Panopto format][m01v05]
-+ See above for slides and speaker notes.
-+ m01-5507-simon-documentation-header is available in [text format][git3]
-+ Live demo available in [Panopto format][m01v05a]
++ PowerPoint presentation available in [Panopto format][m01v05] ( 6 minutes)
++ SAS live demonstration available in [Panopto format][m01v05a] ( 8 minutes)
 
 #### M01-V06. Storing SAS datasets using libname
 
-+ Video available in [Panopto format][m01v06]
-+ See above for slides and speaker notes.
-+ m01-5507-simon-permanent-storage.sas is available in [text format][git4]
-+ m01-5507-simon-re-use.sas is available in [text format][git5]
-+ Live demo available in [Panopto format][m01v06a]
++ PowerPoint presentation available in [Panopto format][m01v06] ( 3 minutes)
++ SAS live demonstration available in [Panopto format][m01v06a] (11 minutes)
 
 #### M01-V07. Storing SAS output using ODS
 
-+ Video available in [Panopto format][m01v07]
-+ Slides and speakers notes are not yet available
-+ m01-5507-simon-save-output.sas is available in [text format][git6]
-+ Live demo available in [Panopto format][m01v07a]
++ PowerPoint presentation available in [Panopto format][m01v07] (11 minutes)
++ SAS live demonstration available in [Panopto format][m01v07a] (12 minutes)
 
 #### M01-V08. Reading external data using infile and filename
 
-+ Video available in [Panopto format][m01v08]
-+ Slides and speakers notes are not yet available
-+ m01-5507-simon-read-data.sas is available in [text format][git7]
-+ Live demo available in [Panopto format][m01v08a]
++ PowerPoint presentation available in [Panopto format][m01v08] ( 3 minutes)
++ SAS live demonstration available in [Panopto format][m01v08a] (11 minutes)
+
+#### Total video time: 95 minutes
 
 #### Recommended readings
 
@@ -75,20 +63,12 @@ knit: (function(inputFile, encoding) {
 [sim1]: https://github.com/pmean/introduction-to-sql/blob/master/results/m01-lost-drive.pdf
 [umk1]: https://www.umkc.edu/is/support/services/software/siteLicensed/SAS/Index.asp
 
-[git1]: https://github.com/pmean/introduction-to-SAS/blob/master/results/m01-course-introduction.pdf
-[git2]: https://github.com/pmean/introduction-to-SAS/blob/master/src/m01-5507-simon-basic-program.sas
-[git3]: https://github.com/pmean/introduction-to-SAS/blob/master/src/m01-5507-simon-documentation-header.sas
-[git4]: https://github.com/pmean/introduction-to-SAS/blob/master/src/m01-5507-simon-permanent-storage.sas
-[git5]: https://github.com/pmean/introduction-to-SAS/blob/master/src/m01-5507-simon-re-use.sas
-[git6]: https://github.com/pmean/introduction-to-SAS/blob/master/src/m01-5507-simon-save-output.sas
-[git7]: https://github.com/pmean/introduction-to-SAS/blob/master/src/m01-5507-simon-read-data.sas
-
 [m01v01]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=700eeac6-121e-46d6-a080-ad4500e4c370
 [m01v02]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=a1030297-ab65-4916-a913-ad4500e5d72a
 [m01v03]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=c9b57b4f-3c10-4452-846e-ad4500e79d1c
 [m01v04]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=581a095f-76d2-4cc4-9915-ad4500e9258b
-[m01V05]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=7f15273f-eac7-44b0-8185-ad4500ec1910
-[m01V06]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=8939958a-d768-45dc-b544-ad4500f6261a
+[m01v05]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=7f15273f-eac7-44b0-8185-ad4500ec1910
+[m01v06]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=8939958a-d768-45dc-b544-ad4500f6261a
 [m01v07]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=585aaf55-3c25-4e7d-969b-ad4500f74c55
 [m01v08]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=e2e5c875-eb04-48c5-8764-ad4500f838ae
 
