Added backlink to resources pages

--- a/src/create-module-resources.Rmd
+++ b/src/create-module-resources.Rmd
@@ -18,7 +18,7 @@ list.files(path="../src", pattern="\\.sas") %>%
 list.files(path="../src", pattern="\\.Rmd") -> rmd_v
 
 list.files(path="../results", pattern="\\.pdf") %>%
-  str_subset("-hw0", negate=TRUE) -> pdf_v
+  str_subset("slides") -> pdf_v
 
 list.files(path="../results", pattern="\\.pdf") %>%
   str_subset("-hw0") -> pdf_h
@@ -32,35 +32,58 @@ pdf_h
 ```{r}
 for (module in modules) {
   module_num <- paste0("Module", module)
-  sas_v %>% str_subset(paste0(module, "-")) -> sas_v_subset
-  sas_h %>% str_subset(paste0(module, "-")) -> sas_h_subset
-  rmd_v %>% str_subset(paste0(module, "-")) -> rmd_v_subset
+  pdf_h %>% str_subset(paste0("m", module, "-")) -> pdf_h_subset
+  pdf_v %>% str_subset(paste0("m", module, "-")) -> pdf_v_subset
+  rmd_v %>% str_subset(paste0("m", module, "-")) -> rmd_v_subset
+  sas_h %>% str_subset(paste0("m", module, "-")) -> sas_h_subset
+  sas_v %>% str_subset(paste0("m", module, "-")) -> sas_v_subset
   filename <- str_replace("../modules/5507-xx-resources.md", "xx", module)
 
+  vlist <- sort(c(pdf_v_subset, rmd_v_subset))
+  hlist <- sort(c(pdf_h_subset, sas_h_subset))
   readLines("create-module-resources.txt") %>%
     paste0(collapse="\n")  %>%
     str_replace("Module", module_num) %>%
     str_replace ("the individual modules", module_num) %>%
 
-    paste0("\n\nThis file was last updated on ", Sys.Date(), ".") %>%
+    paste0("\n\nThis file was last updated on ", Sys.Date()) %>%
+    paste0(". You can find this file on [my github site][mygit].") %>%
 
     paste0("\n\n### Resources for ") %>%
     paste0(module_num) %>%
 
     paste0("\n\n#### ") %>%
     paste0("Slides used in the videos\n") %>%
-    paste0("\n", bullet(rmd_v)) %>%
+    paste0("\n", bullet(vlist)) %>%
     
     paste0("\n\n#### ") %>%
     paste0("SAS programs used in the videos\n") %>%
     paste0("\n", bullet(sas_v_subset)) %>%
     
     paste0("\n\n#### ") %>%
-    paste0("Homework solutions, SAS code\n") %>%
-    paste0("\n", bullet(sas_h_subset)) %>%
+    paste0("Homework solutions, SAS code and output\n") %>%
+    paste0("\n", bullet(hlist)) %>%
+      
+    paste0("\n\n<!---my git--->") %>%
+    paste0("\n\n[mygit]: ") %>%
+    paste0(prefix) %>%
+    paste0("modules/5507-") %>%
+    paste0(module) %>%
+    paste0("-resources.md") %>%
     
-    paste0("\n\n", add_links(slides_r_subset, "r", "src/")) %>%
+    paste0("\n\n<!---pdf_h--->") %>%
+    paste0("\n\n", add_links(pdf_h_subset, "pdf", "results/")) %>%
+
+    paste0("\n\n<!---pdf_v--->") %>%
+    paste0("\n\n", add_links(pdf_v_subset, "pdf", "results/")) %>%
+    
+    paste0("\n\n<!---rmd_v--->") %>%
+    paste0("\n\n", add_links(rmd_v_subset, "md", "src/")) %>%
+    
+    paste0("\n\n<!---sas_v--->") %>%
     paste0("\n\n", add_links(sas_v_subset, "sas", "src/")) %>%
+
+    paste0("\n\n<!---sas_h--->") %>%
     paste0("\n\n", add_links(sas_h_subset, "sas", "src/")) -> module_overviews
   
   module_overviews %>% cat
