Added github links to some of the module files

--- a/modules/5507-01-hw.md
+++ b/modules/5507-01-hw.md
@@ -28,5 +28,11 @@ Please briefly introduce yourself. Tell us a bit about yourself professionally, 
 
 Not available yet.
 
+#### Note
+
+This page is available both on Canvas and [my github site][git0]. If you find a discrepancy let me know. The Canvas site should always take precedence.
+
+[git0]: https://github.com/pmean/introduction-to-SAS/blob/master/modules/5507-01-overview.md
+
 [git1]: https://github.com/pmean/introduction-to-SAS/blob/master/src/m01-5507-simon-basic-program.sas
 [git2]: https://github.com/pmean/classes/blob/master/software-engineering/src/grading-rubric.md
