--- a/modules/5507-01-videos.md
+++ b/modules/5507-01-videos.md
@@ -56,6 +56,12 @@ knit: (function(inputFile, encoding) {
 + Simon, Stephen. Help! My Q: drive disappeared! Available in [pdf format][sim1]
 + UMKC. Site-Licensed Software, SAS for Windows. Available in [html format][umk1].
 
+#### Note
+
+This page is available both on Canvas and [my github site][git0]. If you find a discrepancy let me know. The Canvas site should always take precedence.
+
+[git0]: https://github.com/pmean/introduction-to-SAS/blob/master/modules/5507-01-videos.md
+
 [hem1]: https://blogs.sas.com/content/sasdummy/2016/04/24/how-to-run-sas-programs-in-jupyter-notebook/
 [hem2]: https://www.ssc.wisc.edu/~hemken/SASworkshops/Markdown/SASmarkdown.html
 [sas1]: http://support.sas.com/training/sas94/m3_1.htm
