Added Canvas links to 5507-01-hw.md

--- a/modules/5507-01-hw.md
+++ b/modules/5507-01-hw.md
@@ -20,9 +20,13 @@ Take the code in [m01-5507-simon-basic.sas][git1] and run it on your system. Be 
 
 If you get an error message that you can't fix, submit your code and document that error message in the text box. You will get full credit for any reasonable attempt to get the program to run. Future assignments will use [this grading rubric][git2]. If your program ran successfully, describe your difficulties (if any) in getting the program to run in the text box. 
 
+Submit your assignment on the [Canvas website][can1]
+
 #### Discuss01
 
 Please briefly introduce yourself. Tell us a bit about yourself professionally, and optionally tell us one thing that is not related to your work or your career. Also optional, but greatly appreciated, would be a picture of yourself.
+
+Submit your discussion on the [Canvas website][can2]
 
 #### Quiz01
 
@@ -31,6 +35,9 @@ Not available yet.
 #### Note
 
 This page is available both on Canvas and [my github site][git0]. If you find a discrepancy let me know. The Canvas site should always take precedence.
+
+[can1]: https://umsystem.instructure.com/courses/14949/assignments/743939
+[can2]: https://umsystem.instructure.com/courses/14949/discussion_topics/629703
 
 [git0]: https://github.com/pmean/introduction-to-SAS/blob/master/modules/5507-01-overview.md
 
